--- a/.github/workflows/download-profile-image.yml
+++ b/.github/workflows/download-profile-image.yml
@@ -5,9 +5,8 @@ name: Download profile image
 on:
     # Schedule updates (weekly - every Sunday at midnight UTC)
     schedule: [{ cron: "0 0 * * 0" }]
-    # Lines below let you run workflow manually and on each commit
+    # Lines below let you run workflow manually
     workflow_dispatch:
-    push: { branches: ["master", "main"] }
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
